Crash when deleting faces in with new autosmooth #39743

Closed
opened 2014-04-15 10:55:06 +02:00 by Cenek Strichel · 12 comments

System Information
W7 64b, Quadro 4000

Blender Version
3cf39fc

Exact steps for others to reproduce the error

  1. Open my scene
  2. Set viewport to Rendered
  3. Change Angle in Auto Smooth
  4. Blender crash

crash.blend

**System Information** W7 64b, Quadro 4000 **Blender Version** 3cf39fc **Exact steps for others to reproduce the error** 1. Open my scene 2. Set viewport to Rendered 3. Change Angle in Auto Smooth 4. Blender crash [crash.blend](https://archive.blender.org/developer/F84932/crash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Author

edit: Change it with dragging.

edit: Change it with dragging.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2014-04-15 11:11:42 +02:00

This is supposed to be fixed this morning (4f1a5192c2, #39742). Please re-check tomorrow with nightly builds.

Closing for now, thanks for the report anyway. :)

This is supposed to be fixed this morning (4f1a5192c2, #39742). Please re-check tomorrow with nightly builds. Closing for now, thanks for the report anyway. :)
Author

It also crash when I delete face (without rendering). It also solve this problem? Or this is another bug?

It also crash when I delete face (without rendering). It also solve this problem? Or this is another bug?
Bastien Montagne changed title from Autosmooth and Viewport render crash Blender to Crash when deleting faces in with new autosmooth 2014-04-15 14:23:03 +02:00

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Other bug! :p

Other bug! :p

This issue was referenced by blender/blender-addons-contrib@a15ae56421

This issue was referenced by blender/blender-addons-contrib@a15ae564217f2b47848c337e477068be0e150973

This issue was referenced by a15ae56421

This issue was referenced by a15ae564217f2b47848c337e477068be0e150973

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a15ae56421.

Closed by commit a15ae56421.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39743
No description provided.