Fix T39743: Crash when deleting faces in with new autosmooth.

Odd I did not catch this one... :/